@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed fltk-config to give --libs on one line (STR #2408)
 	- Fixed tab key navigation to inactive widgets (STR #2420)
 	- Fixed outside label redraw damage areas (STR #2436)
 	- Added callback when double-clicking file in a file chooser
